# cpp-cmake-default

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile
.github/workflows/: build_and_test.yml  build_cpp17.yml  build_cpp20.yml  build_cpp23.yml  c-cpp.yml  devcontainer.yml
benchmark/: CMakeLists.txt
include/: example.h  example.hpp
include/cpp_cmake_default/: defines.hpp  example.hpp
src/: CMakeLists.txt  main.cc  main.cpp
test/: CMakeLists.txt  example.cc  example.cpp
